// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🔬 Titled Navigation Block 🔎 Block should be available. 1`] = `
"<!-- wp:purdue-blocks/title-nav -->
<section class=\\"section pu-title-nav \\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Block Editor Fields 🔎 Richtext editor should update output correctly. 1`] = `
"<!-- wp:purdue-blocks/title-nav -->
<section class=\\"section pu-title-nav \\"><h2 class=\\"pu-title-nav__title\\">Title Test</h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Side Panel Settings 🔎 Outline should be added correctly. 1`] = `
"<!-- wp:purdue-blocks/title-nav {\\"hasOutline\\":true} -->
<section class=\\"section pu-title-nav has-outline\\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Side Panel Settings 🔎 Outline should be added correctly. 2`] = `
"<!-- wp:purdue-blocks/title-nav -->
<section class=\\"section pu-title-nav \\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Side Panel Settings 🔬 Adding/Removing Navigation Links 🔎 Navigation links added correctly. 1`] = `
"<!-- wp:purdue-blocks/title-nav {\\"numLinks\\":3} -->
<section class=\\"section pu-title-nav \\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link -->

<!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link -->

<!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Side Panel Settings 🔬 Adding/Removing Navigation Links 🔎 Number of navigation links update correctly. 1`] = `
"<!-- wp:purdue-blocks/title-nav {\\"numLinks\\":2} -->
<section class=\\"section pu-title-nav \\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link -->

<!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;

exports[`🔬 Titled Navigation Block 🔬 Side Panel Settings 🔬 CTA Button Settings 🔎 CTA button controls should update output correctly. 1`] = `
"<!-- wp:purdue-blocks/title-nav {\\"addButton\\":true,\\"buttonText\\":\\"Button Text\\",\\"buttonLink\\":\\"https://www.purdue.edu\\"} -->
<section class=\\"section pu-title-nav \\"><div class=\\"columns\\"><div class=\\"column is-8 pu-title-nav__left\\"><h2 class=\\"pu-title-nav__title\\"></h2><ul class=\\"pu-title-nav__menu\\"><!-- wp:purdue-blocks/title-nav-link -->
<li class=\\"\\"></li>
<!-- /wp:purdue-blocks/title-nav-link --></ul></div><div class=\\"column is-3 is-offset-1 pu-title-nav__right\\"><a class=\\"pu-title-nav__cta\\" href=\\"https://www.purdue.edu\\"> Button Text </a></div></div></section>
<!-- /wp:purdue-blocks/title-nav -->"
`;
